Don't change the indentation mode in the middle of changing the highlighting mode

BUG:200989

svn path=/trunk/KDE/kdelibs/kate/; revision=1033721